--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Лабараторные работы </h1>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML & CSS</title>
+</head>
+<body>
+    <h1>Основные элементы языка HTML</h1>
+</body>
+</html>
