--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Основные элементы языка HTML</h1>
+    <h2>Лабораторная работа № 1</h2>
+    <ul>
+        <li><a href="lab1/lab1_1.html">Задание 1</a></li>
+        <li><a href="">Задание 2</a></li>
+        <li><a href="">Задание 3</a></li>
+        <li><a href="">Задание 4</a></li>
+    </ul>
 </body>
 </html>
