--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -100,25 +100,25 @@
         <div>3.1.1. Изменение размера и положения текста с помощью элементов sub и
         sup</div>
         <div>Формула расчета энергии:
-        E=mc2</div>
+        E=mc<sup>2</sup></div>
         <div>Химическая формула воды
-        H2O</div>
+        H<sub>2</sub>O</div>
 
         <p>3.1.2. Изменение начертания и гарнитуры</p>
-        <div>i: Используется для текста, который по разным причинам отличается от
-        обычного текста</div>
-        <div>b: Используется для привлечения внимания к тексту, не указывая на то,
-        что это более важно</div>
-        <div>u: Используется для разметки текста, который должен отличаться
-        стилистически от обычного текста</div>
+        <div>i: <i>Используется для текста, который по разным причинам отличается от
+        обычного текста</i></div>
+        <div>b: <b>Используется для привлечения внимания к тексту, не указывая на то,
+        что это более важно</b></div>
+        <div>u: <u>Используется для разметки текста, который должен отличаться
+        стилистически от обычного текста</u></div>
 
         <p>3.1.3. Смысловые элементы («phrase elements»)</p>
-        <div>em: Предназначен для текста, имеющего особое значение или на который
-        следует сделать акцент</div>
-        <div>strong: Элемент сильной значимости указывает на то, что его содержание
-        имеет большое значение, серьезность или срочность</div>
-        <div>cite: Цитата или ссылка на другие ресурсы</div>
-        <div>code: Фрагмент компьютерного кода</div>
+        <div>em: <em>Предназначен для текста, имеющего особое значение или на который
+        следует сделать акцент</em></div>
+        <div>strong: <strong>Элемент сильной значимости указывает на то, что его содержание
+        имеет большое значение, серьезность или срочность</strong></div>
+        <div>cite: <cite>Цитата или ссылка на другие ресурсы</cite></div>
+        <div>code: <code>Фрагмент компьютерного кода</code></div>
 
         <!-- ДОБАВЬТЕ ГОРИЗОНТАЛЬНУЮ ЛИНИЮ HR -->
         <hr>
