--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Лабораторная работа № 1</h2>
     <ul>
         <li><a href="lab1/lab1_1.html">Задание 1</a></li>
-        <li><a href="">Задание 2</a></li>
+        <li><a href="lab1/lab1_2.html">Задание 2</a></li>
         <li><a href="">Задание 3</a></li>
         <li><a href="">Задание 4</a></li>
     </ul>
