--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="lab1/lab1_1.html">Задание 1</a></li>
         <li><a href="lab1/lab1_2.html">Задание 2</a></li>
-        <li><a href="">Задание 3</a></li>
+        <li><a href="lab1_3/doc.html">Задание 3</a></li>
         <li><a href="">Задание 4</a></li>
     </ul>
 </body>
