--- a/lab1_3/doc.html
+++ b/lab1_3/doc.html
@@ -8,7 +8,7 @@
 <h1>Ссылки</h1>
   <ul>
     <li><a href="lab1_3/doc1.html">Как сделать ссылку</a></li>
-    <li><a href="lab1-3/Doc2.html">Цвет ссылок<</a></li>
+    <li><a href="lab1-3/Doc2.html">Цвет ссылок</a></li>
     <li><a href="lab1-3/Doc3.html">Атрибут target</a></li>
     <li><a href="lab1-3/Doc4.html">Изображение в качестве ссылки</a></li>
     <li><a href="lab1-3/Doc5.html">Ссылки внутри страницы</a></li>
