--- a/lab1_3/doc.html
+++ b/lab1_3/doc.html
@@ -7,11 +7,11 @@
 <body>
 <h1>Ссылки</h1>
   <ul>
-    <li><a href="lab1_3/doc1.html">Как сделать ссылку</a></li>
-    <li><a href="lab1-3/Doc2.html">Цвет ссылок</a></li>
-    <li><a href="lab1-3/Doc3.html">Атрибут target</a></li>
-    <li><a href="lab1-3/Doc4.html">Изображение в качестве ссылки</a></li>
-    <li><a href="lab1-3/Doc5.html">Ссылки внутри страницы</a></li>
+    <li><a href="doc1.html">Как сделать ссылку</a></li>
+    <li><a href="doc2.html">Цвет ссылок</a></li>
+    <li><a href="doc3.html">Атрибут target</a></li>
+    <li><a href="doc4.html">Изображение в качестве ссылки</a></li>
+    <li><a href="doc5.html">Ссылки внутри страницы</a></li>
 </ul>
 
 <p><b>Гиперссылка</b> (англ.&#160;<i>hyperlink</i>) в компьютерной терминологии&#160;— часть гипертекстового документа, ссылающаяся на другой элемент (команда, текст, заголовок, примечание, изображение) в самом документе, на другой объект (файл, директория, приложение), расположенный на локальном диске или в компьютерной сети, либо на элементы этого объекта.</p>
