--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
-	<meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Изображения</title>
 </head>
 <body>
