--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -23,7 +23,7 @@
 		<p>Для добавления гибких (responsive) изображений (таких, 
 		которые отображаются хорошо на устройствах с сильно отличающимися размерами экрана, разрешением, и другими характеристиками)
 		используют атрибуты <code>sizes</code> и  <code>srcset</code>.
-		Атрибут <code>sizes</code> задаёт размеры изображения для разных макетов страницы. 
+		Атрибут <code>sizes</code> задаёт размеры изоoбражения для разных макетов страницы. 
 		Атрибут <code>srcset</code> задаёт путь к графическим файлам с учётом размера изображения и устройств.
 
 		</p>
