--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <li><a href="lab2/lab2_4.html">Задание 4</a></li>
         <li><a href="lab2/lab2_5.html">Задание 5</a></li>
     </ul>
+    <h2>Лабораторная работа № 3</h2>
+    <ul>
+        <li><a href="lab3/lab3_1.html">Задание 1</a></li>
+        <li><a href="lab3/lab3_2.html">Задание 2,3</a></li>
+        <li><a href="lab3/lab3_4.html">Задание 4</a></li>
+        <li><a href="lab3/lab3_5.html">Задание 5</a></li>
+        <li><a href="lab3/lab3_6.html">Задание 6</a></li>
+    </ul>
     
 </body>
 </html>
