--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <li><a href="lab3/lab3_5.html">Задание 5</a></li>
         <li><a href="lab3/lab3_6.html">Задание 6</a></li>
     </ul>
+    <h2>Лабораторная работа № 4</h2>
+    <ul>
+        <li><a href="lab4/lab4_1.html">Задание 1</a></li>
+    </ul>
     
 </body>
 </html>
