--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -3,56 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Оформление вертикального меню</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html {
             background: #f0f0f0;
         }
 
         .menu {
-            width: 200px;
+            width: 210px;
             background: #fff;
+            padding-right: 10px;
         }
 
         .menu ul {
-            list-style-type: none;
             margin-bottom: 10px;
-            padding-left: 30px;
+            list-style-type: none;
             position: relative;
+        }
+
+
+        .menu li {
+            color: black;
         }
 
         .menu li::before {
-            content: '\f147';
-            font-family: FontAwesome;
-            width: 16px;
-            height: 16px;
             position: absolute;
-            left: 10px;
-        }
-
-        .menu li li {
-            margin-left: -10px;
-            position: relative;
-        }
-
-        .menu li li::before {
-            content: '\f192';
-            font-family: FontAwesome;
-            width: 16px;
+            background: url("css_sprites.png") -0px -32px no-repeat;
+            left: 20px;
+            content: ''; 
             height: 16px;
-            position: absolute;
-            left: -20px;
+            width: 16px;
         }
 
-       /* .menu li a {
+        .menu li a {
+            color: #369;
         }
 
         .menu li a:hover {
+            color: #369;
+            transition: color 0.3s ease;
         }
-*/
+
+        .menu li ul {
+        }
+
+        .menu li li::before {
+            content: '';
+            width: 16px;
+            height: 16px;
+            position: absolute;
+            background: url("css_sprites.png") no-repeat -0px -0px;
+            left: -3px;
+        }
+
+        .menu li li {
+            margin-left: -20px;
+        }
     </style>
 </head>
-
 <body>
     <nav class="menu">
         <ul>
