--- a/lab2/lab2_1.html
+++ b/lab2/lab2_1.html
@@ -10,17 +10,16 @@
 <li> Курсы
     <ol>
 	<li>Каталог курсов 
-		<pre>
-                Курсы для пользователей
-			Компьютерные курсы для начинающих, Office 2003, Курсы для продвинутых пользователей
-		Настройка и ремонт ПК
-			Настройка офисных и домашних компьютеров, Техническое обслуживание и ремонт ПЭВМ
-		Интернет-технологии
-			Интернет, PHP, Web-мастеринг, Web-дизайн, Flash
-		Компьютерная графика, верстка, дизайн
-			Photoshop, CorelDRAW, QuarkXPress, InDesign
-    </pre></li>
-	<li>Дистанционное обучение</li>
+		<dl>
+			<dt>Курсы для пользователей</dt>
+			<dd>Компьютерные курсы для начинающих, Office 2003, Курсы для продвинутых пользователей</dd>
+			<dt>Настройка и ремонт ПК</dt>
+				<dd>Настройка офисных и домашних компьютеров, Техническое обслуживание и ремонт ПЭВМ</dd>
+			<dt>Интернет-технологии</dt>
+					<dd>Интернет, PHP, Web-мастеринг, Web-дизайн, Flash</dd>
+			<dt>Компьютерная графика, верстка, дизайн</dt>
+				<dd>Photoshop, CorelDRAW, QuarkXPress, InDesign</dd>
+		</dl><li>Дистанционное обучение</li>
 	<li>Запись на курсы</li>
 	<li>Расписание курсов</li>
 	<li>Экзамены</li>
