--- a/index.html
+++ b/index.html
@@ -47,5 +47,13 @@
         <li><a href="lab5/lab5_4.html">Задание 4</a></li>
         <li><a href="lab5/lab5_5.html">Задание 5</a></li>
     </ul>
+    <h2>Лабораторная работа № 6</h2>
+    <ul>
+        <li><a href="https://fm220623.github.io/mamon/">Mamon</a></li>
+    </ul>
+    <h2>Лабораторная работа № 7</h2>
+    <ul>
+        <li><a href="lab7/index.html">Bootstrap</a></li>
+    </ul>
 </body>
 </html>
