--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -24,11 +24,15 @@
     <h2>Демонстрация добавления встроенного фрейма</h2>
 
     <!-- Видео с YouTube -->
+    <figure>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/t6NIAlyQ15k" frameborder="0" allowfullscreen></iframe>
     <figcaption>Видео на YouTube</figcaption>
+    </figure>
 
     <!-- Карта Яндекс -->
+    <figure>
     <iframe src="https://yandex.ru/map-widget/v1/-/CCQFQAsfjA" width="560" height="400" frameborder="0" allowfullscreen="true"></iframe>
     <figcaption>Карта на Яндексе</figcaption>
+    </figure>
 </body>
 </html>
