--- a/lab3/lab3_6.html
+++ b/lab3/lab3_6.html
@@ -34,6 +34,12 @@
             margin-bottom: 20px;
         }
 
+        .wrapper {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 0 10px;
+        }
+
         p {
             margin: 10px 0;
         }
