--- a/lab4/lab4_5.html
+++ b/lab4/lab4_5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Оформление вертикального меню</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/font-awesome.min.css">
     <style>
         html {
             background: #f0f0f0;
@@ -23,7 +23,7 @@
         }
 
         .menu li::before {
-            content: '\f0fe';
+            content: '\f196';
             font-family: FontAwesome;
             width: 16px;
             height: 16px;
