--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -31,7 +31,7 @@
         }
         
         .menu li a:hover {
-            background-color: #fff;
+            background-color: #ffffcc;
             color: #369;
         }
     </style>
