--- a/index.html
+++ b/index.html
@@ -55,5 +55,24 @@
     <ul>
         <li><a href="lab7/index.html">Bootstrap</a></li>
     </ul>
-</body>
+    <h1>JAVASCRIPT</h1>
+    <h2>Лабораторная работа № 1</h2>
+    <ul>
+        <li><a href="javascript/lab1/lab1_1.html">Задание 1</a></li>
+        <li><a href="javascript/lab1/lab1_2.html">Задание 2</a></li>
+        <li><a href="javascript/lab1/lab1_3.html">Задание 3</a></li>
+        <li><a href="javascript/lab1/lab1_4.html">Задание 4</a></li>
+        <li><a href="javascript/lab1/lab1_5.html">Задание 5</a></li>
+    </ul>
+    <h2>Лабораторная работа № 1</h2>
+    <ul>
+        <li><a href="javascript/lab1/lab2_1.html">Задание 1</a></li>
+        <li><a href="javascript/lab1/lab2_2.html">Задание 2</a></li>
+        <li><a href="javascript/lab1/lab2_3.html">Задание 3</a></li>
+        <li><a href="javascript/lab1/lab2_4.html">Задание 4</a></li>
+        <li><a href="javascript/lab1/lab2_5.html">Задание 5</a></li>
+        <li><a href="javascript/lab1/lab2_6.html">Задание 6</a></li>
+        <li><a href="javascript/lab1/lab2_7.html">Задание 7</a></li>
+    </ul>
+    </body>
 </html>
