--- a/index.html
+++ b/index.html
@@ -64,15 +64,35 @@
         <li><a href="javascript/lab1/lab1_4.html">Задание 4</a></li>
         <li><a href="javascript/lab1/lab1_5.html">Задание 5</a></li>
     </ul>
-    <h2>Лабораторная работа № 1</h2>
+    <h2>Лабораторная работа № 2</h2>
     <ul>
-        <li><a href="javascript/lab1/lab2_1.html">Задание 1</a></li>
-        <li><a href="javascript/lab1/lab2_2.html">Задание 2</a></li>
-        <li><a href="javascript/lab1/lab2_3.html">Задание 3</a></li>
-        <li><a href="javascript/lab1/lab2_4.html">Задание 4</a></li>
-        <li><a href="javascript/lab1/lab2_5.html">Задание 5</a></li>
-        <li><a href="javascript/lab1/lab2_6.html">Задание 6</a></li>
-        <li><a href="javascript/lab1/lab2_7.html">Задание 7</a></li>
+        <li><a href="javascript/lab2/lab2.html">Задание 1</a></li>
+    </ul>
+    <h2>Лабораторная работа № 3</h2>
+    <ul>
+        <li><a href="javascript/lab3/lab3.html">Задание 1</a></li>
+    </ul>
+    <h2>Лабораторная работа № 4</h2>
+    <ul>
+        <li><a href="javascript/lab4/lab4.js">Задание 1</a></li>
+    </ul>
+    <h2>Лабораторная работа № 5</h2>
+    <ul>
+        <li><a href="javascript/lab5/lab5_1(test).html">Задание 1</a></li>
+        <li><a href="javascript/lab5/lab5_2(chess).html">Задание 2</a></li>
+        <li><a href="javascript/lab5/lab5_3(list).html">Задание 3</a></li>
+    </ul>
+    <h2>Лабораторная работа № 6</h2>
+    <ul>
+        <li><a href="javascript/lab6/lab6_1(text).html">Задание 1</a></li>
+        <li><a href="javascript/lab6/lab6_2(menu).html">Задание 2</a></li>
+        <li><a href="javascript/lab6/lab6_3(message).html">Задание 3</a></li>
+    </ul>
+    <h2>Лабораторная работа № 7</h2>
+    <ul>
+        <li><a href="javascript/lab7/lab7_1.html">Задание 1</a></li>
+        <li><a href="javascript/lab7/lab7_2.html">Задание 2</a></li>
+        <li><a href="javascript/lab7/lab7_3.html">Задание 3</a></li>
     </ul>
     </body>
 </html>
