--- a/javascript/lab1/lab1_5.html
+++ b/javascript/lab1/lab1_5.html
@@ -8,7 +8,7 @@
 <body>
     <script>
     'use strict'
-    var lines = prompt("Сколько линий: ")
+    var lines = prompt("Lines?")
     var dogs = 3, cats = 2
     for(let i = 0; i < lines; i++){
     if (!dogs && !cats){dogs = 3, cats = 2}
