--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </ul>
     <h2>Лабораторная работа № 4</h2>
     <ul>
-        <li><a href="javascript/lab4/lab4.js">Задание 1</a></li>
+        <li><a href="javascript/lab4/index.html">Задание 1</a></li>
     </ul>
     <h2>Лабораторная работа № 5</h2>
     <ul>
