--- a/javascript/lab7/lab7_2.html
+++ b/javascript/lab7/lab7_2.html
@@ -31,7 +31,7 @@
 
       formField.addEventListener('focus', () => {
           label.style.visibility = 'visible';
-          formField.setAttribute('placeholder', 'example@yandex.ru');
+          formField.setAttribute('placeholder', 'eeeeeeeee');
       });
 
       formField.addEventListener('blur', () => {
