--- a/javascript/lab7/lab7_2.html
+++ b/javascript/lab7/lab7_2.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <style>
-        ::placeholder {
+        label {
+            position: absolute;
+            top: 0;
+            left: 5px;
+            transition: all 0.3s;
+            pointer-events: none;
+            font-size: 16px;
+            color: grey;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px 5px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        input:focus + label,
+        input:not(:placeholder-shown) + label {
+            top: -20px;
+            left: 5px;
+            font-size: 12px;
             color: blue;
         }
     </style>
@@ -14,33 +35,29 @@
 <body>
 
     <form id="form">
-        <label for="placeholder"></label>   
-        <input id="placeholder" type="text" data-placeholder="aaaaaa">
+        <div class="form-group">
+            <input id="placeholder" type="text" placeholder=" " data-placeholder="Введите текст">
+            <label for="placeholder">Введите текст</label>
+        </div>
     </form>
-    
+
     <script>
+        'use strict';
 
-      let form = document.getElementById("form");
-      let formField = form.getElementsByTagName('input')[0];
-      let label = form.getElementsByTagName('label')[0];
+        let field = document.getElementById("placeholder");
+        let label = field.nextElementSibling;
 
-      label.style.visibility = 'hidden';
+        field.addEventListener('focus', () => {
+            label.style.color = 'blue';
+        });
 
-      formField.setAttribute('placeholder', formField.dataset.placeholder);
-      label.innerHTML = formField.dataset.placeholder;
-
-      formField.addEventListener('focus', () => {
-          label.style.visibility = 'visible';
-          formField.setAttribute('placeholder', 'eeeeeeeee');
-      });
-
-      formField.addEventListener('blur', () => {
-          label.style.visibility = 'hidden';
-          formField.setAttribute('placeholder', formField.dataset.placeholder);
-          
-      });
-
+        field.addEventListener('blur', () => {
+            if (!field.value) {
+                label.style.color = 'grey';
+            }
+        });
     </script>
 
 </body>
+
 </html>
